--- a/style.css
+++ b/style.css
@@ -1,114 +1,185 @@
-*{
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Georgia(serif);
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  width: 100%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  /* background-color: crimson; */
+  max-width: 1440px;
+}
+
+
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  width: 100%;
+  padding: 20px 30px;
+  list-style: none;
+  align-items: center;
+}
+
+nav ul .left {
+  margin-right: auto;
+}
+
+nav ul li > a {
+  width: 0;
+  height: 2px;
+  margin-left: auto;
+  margin-bottom: 3px;
+  margin-right: 20px;
+  text-decoration: none;
+  transition: 0.5s;
+  color: #000;
+  font-weight: 500;
+  font-size: 15px;
+}
+nav ul li > a:hover{
+  color: #043886;
+}
+
+nav ul li > a > i {
+  color: blue
+}
+
+nav ul li .logo{
+  font-size: 30px;
+  margin-right: auto;
+}
+
+section.left {
+  background-color: #f9f9f9;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+
+}
+
+section.left > article {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  padding-inline: 5rem;
+  gap: 1rem;
+}
+
+
+section.left > article > h1 {
+  font-size: 50px;
+  font-weight: 900;
+}
+
+section.left > article p {
+  opacity: .6;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 120%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+section.left > article a {
+  width: auto;
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  border-radius: 5px;
+  background-color: blue;
+  padding: 8px 12px;
+  font-size: 13px;
+  font-weight: 500;
+}
+
+aside {
+  background-color: darkseagreen;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: 1fr 1fr;
+  height: 100vh;
+}
+
+aside > div {
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+}
+
+aside > div > img {
+  width: 100%;
+  /* position: absolute;
+  top: 0;
+  left: 0; */
+  cursor: pointer;
+  transition: 0.3s;
+  /* border-radius: 50px; */
+  object-fit: cover;
+}
+
+aside > div > img:hover {
+  transform: scale(1.3) rotate(7deg);
+}
+
+#rbottom {
+  grid-column: span 2;
+}
+
+@media screen and (max-width: 768px) {
+  body{
+    height: auto;
+  }
+  main{
+    grid-template-columns: 1fr;
+    grid-template-rows: 50% 50%;
+    height: auto;
+  }
+
+  nav ul{
+    gap: 5px;
+    padding: 20px;
+  }
+
+  nav ul li.left{
     margin: 0;
-    padding: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    box-sizing: border-box;
-}
+  }
 
-html,body{
-    height: 100%;
-    width: 100%;
-}
+  main section.left{
+    height: auto;
+  }
 
-#main{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    /* background-color: crimson; */
-}
+  main section.left article{
+    padding: 10px;
+  }
 
-#left{
-    position: relative;
-    width: 40%;
-    height: 100%;
-    /* background-color: darksalmon; */
-}
-#lnav{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 20px 30px;
-}
-#lnavr{
-    display: flex;
-    align-items: center;
-}
-#lnavr a{
-    margin-right: 20px;
-    text-decoration: none;
-    color: #000;
-    font-weight: 500;
-    font-size: 15px;
-}
-#lnavr i{
-    color:blue
-}
-#left #textcenter{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50% );
-}
+  main section.left article h1{
+    font-size: 10vw;
+  }
 
-#textcenter h1{
-    font-size: 70px;
-    font-weight: 900;
-}
+  main section.left article h3{
+    font-size: 8vw;
+  }
 
-#textcenter p{
-    opacity: .6;
-    font-size: 15px;
-    line-height: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
+  main section.left article p{
+    font-size: 5vw;
+  }
+  main aside{
+    height: auto;
+  }
 
-#textcenter a{
-    text-decoration: none;
-    color: #000;
-    border-bottom: 1px solid #000;
-    padding-bottom: 5px;
-    font-size: 13px;
-    font-weight: 500;
-    opacity: .6;
-}
-#right{
-    width: 60%;
-    height: 100%;
-    background-image: url("https://images.unsplash.com/photo-1722709993991-710c0147ab0b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw3NXx8fGVufDB8fHx8fA%3D%3D");
-    background-position: center;
-    background-size: cover;
-}
-#rtop{
-    display: flex;
-    width: 100%;
-    height: 50%;
-    background-color:darkseagreen;
-}
-#rtopleft{
-    width: 55%;
-    height: 100%;
-    background-image: url("./landing.png.jpg");
-    background-size: cover;
-    background-position: center;
-}
-#rtopright{
-    width: 45%;
-    height: 100%;
-    background-image: url("./BEAR.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-@media (max-width: 500px){
-    #main{
-        flex-direction: colunm ;
-    }
-    #main #left{
-        width:100%;
-    
-}
-    #main #right{
-        width: 100%;
-    }
+  main #section .left #artical{
+    width: 200px;
+    height: 200px;
+  }
 }
